Added progress bars, better layout, snackbars, DataManager, Profile

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -37,23 +37,13 @@
             android:id="@+id/profile_picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"
+            android:contentDescription="@string/profile_picture_alt" />
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="?android:attr/listDivider" />
-
-        <View
-            android:id="@+id/divider2"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="?android:attr/listDivider" />
     </androidx.cardview.widget.CardView>
 
     <View
-        android:id="@+id/divider3"
+        android:id="@+id/birthday_level_divider"
         android:layout_width="1dp"
         android:layout_height="50dp"
         android:layout_marginTop="33dp"
@@ -61,6 +51,78 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_username" />
+
+    <LinearLayout
+        android:id="@+id/birthday_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/birthday_level_divider"
+        app:layout_constraintTop_toBottomOf="@+id/profile_username">
+
+        <TextView
+            android:id="@+id/birthday_icon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:text="@string/birthday_cake_emoji"
+            android:visibility="gone"/>
+
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="18dp"
+            android:indeterminate="true"
+            android:textAlignment="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="3dp"
+            />
+
+        <TextView
+            android:id="@+id/birthday_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="@string/loading" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/level_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toEndOf="@+id/birthday_level_divider"
+        app:layout_constraintTop_toBottomOf="@+id/profile_username">
+
+        <TextView
+            android:id="@+id/level_icon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:text="@string/crown_emoji"
+            android:visibility="gone"/>
+
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="18dp"
+            android:indeterminate="true"
+            android:textAlignment="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="3dp"
+            />
+
+        <TextView
+            android:id="@+id/level_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="@string/loading" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
