--- a/app/src/main/res/layout/partner_profile.xml
+++ b/app/src/main/res/layout/partner_profile.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/partner_profile_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/profile_image_alt"
