--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+<vector android:height="108dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="108dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M211.27,289.53h-20.87c-0.3,0 -0.59,-0.15 -0.77,-0.39l-20.58,-28.57c-0.18,-0.25 -0.46,-0.39 -0.77,-0.39h-5.4c-0.52,0 -0.94,0.42 -0.94,0.93v27.49c0,0.51 -0.42,0.93 -0.94,0.93h-17.06c-0.52,0 -0.94,-0.42 -0.94,-0.93v-78.18c0,-0.51 0.42,-0.93 0.94,-0.93h29.57c4.21,0 7.88,0.28 11,0.83 3.12,0.56 6.01,1.71 8.66,3.47 2.72,1.83 4.87,4.15 6.47,6.96 1.6,2.81 2.39,6.39 2.39,10.72 0,6.13 -1.31,11.1 -3.92,14.92 -2.43,3.54 -5.62,6.42 -9.57,8.61 -0.49,0.27 -0.62,0.91 -0.28,1.36l23.76,31.68c0.46,0.61 0.02,1.49 -0.76,1.49ZM182.48,234c0,-2.01 -0.37,-3.74 -1.1,-5.19 -0.73,-1.45 -1.94,-2.57 -3.64,-3.36 -1.19,-0.54 -2.51,-0.88 -3.97,-1.02 -1.46,-0.14 -3.28,-0.22 -5.45,-0.22h-5.43c-0.52,0 -0.94,0.42 -0.94,0.93v19.69c0,0.51 0.42,0.93 0.94,0.93h4.51c2.65,0 4.9,-0.17 6.75,-0.51 1.85,-0.34 3.42,-1.07 4.71,-2.18 1.22,-1 2.13,-2.2 2.73,-3.6 0.59,-1.4 0.89,-3.23 0.89,-5.48Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M234.61,289.53h-15.94c-0.52,0 -0.94,-0.42 -0.94,-0.93v-58.51c0,-0.51 0.42,-0.93 0.94,-0.93h15.94c0.52,0 0.94,0.42 0.94,0.93v58.51c0,0.51 -0.42,0.93 -0.94,0.93Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M301.86,289.53h-16.05c-0.52,0 -0.94,-0.42 -0.94,-0.93v-29.01c0,-2.44 -0.09,-4.86 -0.28,-7.28 -0.19,-2.42 -0.54,-4.2 -1.04,-5.35 -0.61,-1.36 -1.49,-2.34 -2.65,-2.93 -1.15,-0.59 -2.7,-0.89 -4.64,-0.89 -1.46,0 -2.94,0.29 -4.43,0.86 -1.38,0.53 -2.85,1.35 -4.4,2.46 -0.24,0.17 -0.39,0.46 -0.39,0.76v41.39c0,0.51 -0.42,0.93 -0.94,0.93h-15.94c-0.52,0 -0.94,-0.42 -0.94,-0.93v-58.51c0,-0.51 0.42,-0.93 0.94,-0.93h15.94c0.52,0 0.94,0.42 0.94,0.93v3.68c0,0.8 0.94,1.22 1.55,0.71 2.38,-1.98 4.7,-3.58 6.98,-4.78 2.77,-1.47 5.83,-2.2 9.2,-2.2 5.84,0 10.31,1.94 13.4,5.83 3.09,3.89 4.64,9.52 4.64,16.91v38.37c0,0.51 -0.42,0.93 -0.94,0.93Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M368,282.6c0,5.59 -0.76,10.34 -2.29,14.25 -1.53,3.91 -3.62,6.95 -6.27,9.14 -2.65,2.22 -5.82,3.83 -9.53,4.81 -3.7,0.99 -7.81,1.48 -12.33,1.48 -3.8,0 -7.41,-0.26 -10.82,-0.78 -3.1,-0.47 -5.83,-1.01 -8.19,-1.62 -0.41,-0.11 -0.7,-0.48 -0.7,-0.9v-13.46c0,-0.51 0.42,-0.93 0.94,-0.93h0.96c0.12,0 0.24,0.02 0.35,0.07 0.85,0.34 1.84,0.71 2.97,1.12 1.2,0.43 2.42,0.82 3.64,1.18 1.46,0.39 2.89,0.72 4.28,0.97 1.39,0.25 2.82,0.38 4.28,0.38 3.02,0 5.54,-0.33 7.56,-0.99 2.02,-0.66 3.54,-1.6 4.56,-2.82 1.02,-1.25 1.73,-2.73 2.14,-4.44 0.41,-1.7 0.61,-3.84 0.61,-6.42v-1.13c-2,1.86 -4.32,3.36 -6.95,4.49 -2.63,1.13 -5.34,1.69 -8.13,1.69 -7.4,0 -13.12,-2.54 -17.14,-7.63 -4.02,-5.09 -6.04,-12.83 -6.04,-23.22 0,-4.73 0.62,-8.98 1.86,-12.74 1.24,-3.76 2.96,-6.97 5.17,-9.62 2.11,-2.54 4.65,-4.51 7.64,-5.89 2.99,-1.38 6.1,-2.07 9.32,-2.07 2.92,0 5.53,0.39 7.84,1.18 1.87,0.64 3.61,1.46 5.22,2.45 0.54,0.34 1.26,0.05 1.41,-0.57l0.17,-0.69c0.1,-0.42 0.48,-0.71 0.92,-0.71h15.59c0.52,0 0.94,0.42 0.94,0.93v52.5ZM350.17,270.04v-26.29c0,-0.38 -0.23,-0.72 -0.59,-0.86 -0.76,-0.32 -1.66,-0.59 -2.67,-0.81 -1.29,-0.29 -2.58,-0.43 -3.87,-0.43 -4.28,0 -7.5,1.46 -9.65,4.38 -2.16,2.92 -3.23,7 -3.23,12.23 0,2.62 0.16,4.83 0.48,6.64 0.32,1.81 0.92,3.41 1.81,4.81 0.85,1.36 1.96,2.39 3.34,3.09 1.38,0.7 3.13,1.05 5.27,1.05 1.6,0 3.17,-0.29 4.71,-0.86 1.41,-0.52 2.75,-1.25 4.03,-2.19 0.24,-0.17 0.38,-0.46 0.38,-0.75Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M162.46,201.28c-1.01,-1.51 31.52,-50.37 93.04,-50.78 76.26,-0.5 103.87,70.09 102.7,71.39 -1.13,1.25 -39.98,-53.19 -105.56,-51.68 -62.85,1.45 -89.19,32.53 -90.17,31.07Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M152.29,297.8c-1.65,2.12 27.88,65.01 93.55,69.88 64.97,4.81 102.44,-46.46 101.17,-48.76 -1.21,-2.19 -35.12,34.86 -98.95,30.27 -65.01,-4.68 -94.19,-53.41 -95.77,-51.38Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M347.41,143l-19.52,0.25c-1.06,0.01 -1.91,0.87 -1.9,1.92l0.24,35.41c0,1.06 0.89,1.91 1.97,1.89l35.81,-0.8c1.05,-0.02 1.89,-0.88 1.88,-1.92l-0.13,-18.68c0,-0.5 -0.21,-0.98 -0.57,-1.33l-16.41,-16.18c-0.37,-0.36 -0.87,-0.56 -1.38,-0.56Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M217.04,213.28a9.41,9.3 0,1 0,18.82 0a9.41,9.3 0,1 0,-18.82 0z"/>
 </vector>
